--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#inicio" onclick="seleccionar()">Inicio</a>
                 <a href="#nosotros" onclick="seleccionar()">Nosotros</a>
                 <a href="#servicios" onclick="seleccionar()">Servicios</a>
-                <a href="#comodidades" onclick="seleccionar()">Comodida</a>
+                <a href="#comodidades" onclick="seleccionar()">Comodidades</a>
                 <a href="#galeria" onclick="seleccionar()">Galería</a>
                 <a href="#equipo" onclick="seleccionar()">Equipo</a>
                 <a href="#contacto" onclick="seleccionar()">Contacto</a>
