--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="logo.ico">
     <title>MUTTS</title>
 </head>
 <body>
@@ -53,13 +54,13 @@
                     02.CROSSFIT
                 </div>
                 <div class="opcion">
-                    03.BOXING
+                    03.PESO
                 </div>
                 <div class="opcion">
-                    04.ENDURANCE
+                    04.ENDURECER
                 </div>
                 <div class="opcion">
-                    05.YOGA
+                    05.PERDIDA PESO
                 </div>
                 <div class="opcion">
                     06.CARDIO
@@ -92,8 +93,8 @@
                         <h2>NOSOTROS</h2>
                     </div>
                 </div>
-                <p class="p-especial">DESCRIPCION DE MUTTS</p>
-                <p>SUBTEXTO DE MUTTS</p>
+                <p class="p-especial">¡NOS ENFOCAMOS EN TI!</p>
+                <p>En MUTTS, tu bienestar es nuestra prioridad. Somos un espacio moderno y totalmente equipado, diseñado para ayudarte a alcanzar tus metas físicas y mejorar tu calidad de vida. Contamos con maquinaria de última generación, un equipo de entrenador certificado y una amplia variedad de clases dirigidas para todos los niveles.</p>
             </div>
         </div>
         <hr>
@@ -102,7 +103,7 @@
                 <span class="frase">
                     <span class="txtRojo">ENTRENA</span> DIFERENTE
                 </span>
-                <h2>ENTRENA <span class="txtRojo">GRATIS</span> HOY!</h2>
+                <h2>ENTRENA <span class="txtRojo">POR TI</span> HOY!</h2>
             </div>
             <div class="col2">
                 <button>PASE LIBRE</button>
@@ -124,8 +125,7 @@
                             <h2>SERVICIOS</h2>
                         </div>
                     </div>
-                    <p class="p-especial">Texto de prueba MUTTS</p>
-                    <p>Texto Prueba MUTTS</p>
+                    <p class="p-especial">En MUTTS, ofrecemos una variedad de servicios diseñados para adaptarse a tus objetivos y estilo de vida</p>
                 </div>
                 <div class="col">
                     <img src="img/servicios.png" alt="">
@@ -137,35 +137,36 @@
                 <tr>
                     <td>
                         <i class="fa-solid fa-person-walking"></i>
-                        <h3><span class="txtRojo">Clases </span> de Fitness</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis.</p>
+                        <h3><span class="txtRojo">Sala </span>de musculación y cardio
+                        </h3>
+                        <p>Espacios amplios y equipados con máquinas de última tecnología para entrenamientos de fuerza y resistencia cardiovascular.</p>
                     </td>
                     <td>
                         <i class="fa-solid fa-dumbbell"></i>
-                        <h3><span class="txtRojo">Clases </span> de Crossfit</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis.</p>
+                        <h3><span class="txtRojo">Entrenamiento </span> Personalizado</h3>
+                        <p>Entrena con la guía de profesionales certificados que te ayudarán a diseñar un plan de ejercicios adaptado a tus metas.</p>
                     </td>
                     <td>
-                        <i class="fa-solid fa-mitten"></i>
-                        <h3><span class="txtRojo">Clases </span> de Boxeo</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis.</p>
+                        <i class="fa-solid fa-weight-hanging"></i>
+                        <h3><span class="txtRojo">Asesoria </span> Nutricional</h3>
+                        <p>Complementa tu entrenamiento con planes nutricionales elaborados por especialistas para mejorar tu rendimiento y resultados.</p>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <i class="fa-solid fa-clock"></i>
-                        <h3><span class="txtRojo">Clases </span> de Enduro</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis.</p>
+                        <h3><span class="txtRojo">Zona </span> de Calentamiento</h3>
+                        <p>Estira todos musculos para ponerte a fin con los ejercicios personalizados</p>
                     </td>
                     <td>
                         <i class="fa-solid fa-heart-circle-bolt"></i>
-                        <h3><span class="txtRojo">Clases </span> de Cardio</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis.</p>
+                        <h3><span class="txtRojo">Evaluacion </span> Fisica</h3>
+                        <p>Conoce tu punto de partida con un análisis completo de tu estado físico y recibe recomendaciones personalizadas.</p>
                     </td>
                     <td>
-                        <i class="fa-solid fa-bicycle"></i>
-                        <h3><span class="txtRojo">Clases </span> de Ciclismo</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis.</p>
+                        <i class="fa-solid fa-fire-flame-simple"></i>
+                        <h3><span class="txtRojo">Promociones </span> y Programas especiales</h3>
+                        <p>Planes corporativos, descuentos para estudiantes, programas de inicio, retos mensuales y más.</p>
                     </td>
                 </tr>
             </table>
@@ -188,11 +189,11 @@
                         <h2>COMODIDADES</h2>
                     </div>
                 </div>
-                <p class="p-especial">Texto de prueba MUTTS</p>
+                <p class="p-especial">En MUTTS nos enfocamos en ofrecerte una experiencia completa, cómoda y segura. Por eso, contamos con instalaciones de primer nivel que complementan tu rutina de entrenamiento</p>
                 <ul>
-                    <li><span>PILETA</span> - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tenetur, nam cumque adipisci ratione obcaecati impedit inventore eligendi</li>
-                    <li><span>WIFI GRATIS</span> - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tenetur, nam cumque adipisci ratione obcaecati impedit inventore</li>
-                    <li><span>ESTACIONAMIENTO GRATIS</span> - Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tenetur, nam cumque adipisci ratione obcaecati impedit?</li>
+                    <li><span>🅿️ Estacionamiento exclusivo</span> - Olvídate de buscar lugar: contamos con estacionamiento gratuito para nuestros socios.</li>
+                    <li><span>🧴 Higiene y limpieza constante</span> - Cumplimos con altos estándares de limpieza y desinfección en todas las áreas del gimnasio, garantizando un ambiente seguro.</li>
+                    <li><span>📍 Ubicación accesible</span> - Estamos en una zona estratégica, de fácil acceso y con transporte público cercano.</li>
                 </ul>
             </div>
         </div>
@@ -281,19 +282,21 @@
                     <span class="frase">LA MEJOR EXPERIENCIA</span>
                     <h2>CONTACTO</h2>
                 </div>
-            </div>
-            <div class="fila">
-                <div class="col">
-                    <input type="text" placeholder="Ingrese Email">
-                </div>
-                <div class="col">
-                    <input type="text" placeholder="Ingrese Nombre">
-                </div>
-            </div>
-            <div class="mensaje">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Ingresa el Mensaje"></textarea>
-                <button>Enviar Mensaje</button>
-            </div>
+            </div> 
+            <div id="wrapper">
+                <form action="https://formsubmit.co/jereparedes03@gmail.com" method="POST">
+                        <label for="email">Correo Electronico</label>
+                        <input type="email" name="email">
+
+                        <label for="Nombre">Nombre</label>
+                        <input type="text" name="name">
+
+                        <label for="comments">Mensaje</label>
+                        <textarea name="comments" col="15" rows="5"></textarea>
+
+                        <input type="submit" value="Enviar">
+                </form>
+            </div>    
             <div class="fila-datos">
                 <div class="col">
                     <i class="fa-solid fa-location-dot"></i>
@@ -305,7 +308,9 @@
                 </div>
                 <div class="col">
                     <i class="fa-regular fa-clock"></i>
-                    Lunes a Sábado, 8:00h - 24:00h
+                    Lunes a Viernes, 7:30 am - 21:30pm
+                    <br>
+                    Sabado, 7:30 am - 13:00 pm
                 </div>
             </div>
         </div>
