--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 </div>
             </div> 
             <div id="wrapper" class="fila">
-                <form action="https://formsubmit.co/jereparedes03@gmail.com" method="POST">
+                <form action="https://formsubmit.co/tripailaf1992@gmail.com" method="POST">
                         <label for="email">Correo Electronico</label>
                         <input type="email" name="correo">
 
