--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="col">
                     <img src="img/joel_3.jpg" alt="">
                     <div class="info">
-                        <h2>Joel Ramos</h2>
+                        <h2>Joel Tripailaf Ramos</h2>
                         <p>Entrenador Personal</p>
                         <a href="https://www.instagram.com/ignacio__joel?igsh=anZnYnk1YXR2bWRw">
                             <i class="fa-brands fa-square-instagram"></i>
